--- a/.ci/pull-request-config.yaml
+++ b/.ci/pull-request-config.yaml
@@ -47,6 +47,9 @@ build:
         mvn dependency:tree clean -Dfull ${{ env.MVN_CMD }} ${{ env.BUILD_MVN_OPTS }} ${{ env.BUILD_MVN_OPTS_CURRENT }} ${{ env.KOGITO_RUNTIMES_BUILD_MVN_OPTS }}
       upstream: |
         mvn dependency:tree clean install -Dquickly -Dfull ${{ env.BUILD_MVN_OPTS }} ${{ env.BUILD_MVN_OPTS_UPSTREAM }} ${{ env.KOGITO_RUNTIMES_BUILD_MVN_OPTS_UPSTREAM }}
+      after:
+        current: |
+          cat /home/runner/work/incubator-kie-kogito-runtimes/incubator-kie-kogito-runtimes/apache_incubator-kie-kogito-runtimes/springboot/integration-tests/target/kogito-spring-boot-integration-tests-999-SNAPSHOT.buildcompare
 
   - project: apache/incubator-kie-kogito-apps
     build-command: 
